# MaterIA

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/materia/: __init__.py  __main__.py  _version.py  cli.py  resources.py  skeleton.py
src/materia/core/: constants.py  errors.py  physics.py  utils.py
src/materia/data/: indicator_synonyms.json
src/materia/epd/: filters.py  models.py  pipeline.py
src/materia/geo/: locations.py
src/materia/io/: __init__.py  files.py  paths.py
src/materia/market/: comtrade.py  market.py  shares.py  updater.py
src/materia/metrics/: averaging.py  normalize.py
src/materia_epd/: __init__.py  __main__.py  cli.py  resources.py  skeleton.py
src/materia_epd/core/: constants.py  errors.py  physics.py  utils.py
src/materia_epd/data/: indicator_synonyms.json  regions_mapping.json
src/materia_epd/epd/: filters.py  models.py  pipeline.py
src/materia_epd/geo/: locations.py
src/materia_epd/io/: files.py
src/materia_epd/market/: market.py
tests/: conftest.py  test_skeleton.py
tests/unit/: test_averaging.py  test_cli.py  test_comtrade.py  test_constants.py  test_dunder_main.py  test_errors.py  test_files.py  test_filters.py  test_locations.py  test_market.py  test_models.py  test_normalize.py  test_physics.py  test_pipeline.py  test_readers.py  test_resources.py  test_shares.py  test_utils.py
(+583 files in other folders)
