[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materia"
dynamic = ["version"]
requires-python = ">=3.10"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
materia = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "--cov=materia --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
